# ObjectTrackingInVideo

./: CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt  detector.cpp  detector.h  main.cpp  object.cpp  object.h
